# HipHop-Jumper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Recursos/img/1fase/: 1fase_final.tmx
Recursos/img/2_3fase/: terceira fase.tmx
Recursos/map/: 1fase.txt  1fase2.txt  1fase2_scaled.txt  1fase_final.txt  1fase_final_scaled.txt  2_3_fase.txt  2_3_fase_final.txt  map_test.txt  map_test_tileset.txt  map_vertical.txt  tutorial.txt
hhj.xcodeproj/: project.pbxproj
hhj.xcodeproj/project.xcworkspace/xcuserdata/pedrovenzi.xcuserdatad/: UserInterfaceState.xcuserstate
hhj.xcodeproj/xcshareddata/xcschemes/: hhj.xcscheme
hhj.xcodeproj/xcuserdata/pedrovenzi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hhj.xcodeproj/xcuserdata/pedrovenzi.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: AIController.hpp  AmbientManager.hpp  Animation.hpp  Animator.hpp  Bullet.hpp  Button.hpp  CadernoState.hpp  Camera.hpp  Character.hpp  Collider.hpp  Collision.hpp  Component.hpp  DetectionZone.hpp  DialogState.hpp  DrawState.hpp  EndState.hpp  Game.hpp  GameData.hpp  GameObject.hpp  Gun.hpp  HUD.hpp  InputManager.hpp  InventoryItem.hpp  Item.hpp  ItemData.hpp  KeyBindingManager.hpp  LevelSelectorState.hpp  Music.hpp  MusicManager.hpp  NPC.hpp  NotebookState.hpp  OptionsState.hpp  PauseState.hpp  PlayerController.hpp  Rect.hpp  Resources.hpp  Sound.hpp  Sprite.hpp  SpriteRenderer.hpp  Stage2State.hpp  (+14 more)
src/: AIController.cpp  AmbientManager.cpp  Animation.cpp  Animator.cpp  Bullet.cpp  Button.cpp  CadernoState.cpp  Camera.cpp  Character.cpp  Collider.cpp  Component.cpp  DetectionZone.cpp  DialogState.cpp  DrawState.cpp  EndState.cpp  Game.cpp  GameData.cpp  GameObject.cpp  Gun.cpp  HUD.cpp  InputManager.cpp  InventoryItem.cpp  Item.cpp  ItemData.cpp  KeyBindingManager.cpp  LevelSelectorState.cpp  Music.cpp  MusicManager.cpp  MusicManager.hpp  NPC.cpp  NotebookState.cpp  OptionsState.cpp  PauseState.cpp  PlayerController.cpp  Rect.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  SpriteRenderer.cpp  Stage2State.cpp  (+14 more)
